# hermes.ai

./: .gitignore  HermesBoard.py  README.md  pyproject.toml
hermes/: CaravaggioBoard.py  board.py  cli.py  hermes_board.py
hermes/model/: Hermes.h5  builder.py  hermes_builder.py  super_hermes_builder.py
