[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
    "tensorflow >= 2.16",
    "pandas >= 2.2",
    "numpy >= 1.26",
    "click >= 8.1",
    "opencv-python >= 4.9",
    "pillow >= 10.3",
    "scikit-learn >= 1.5",
]

[project.scripts]
hermes = "hermes.cli:hermes"
